--- a/desktop/css/desktop.main.css
+++ b/desktop/css/desktop.main.css
@@ -2678,7 +2678,7 @@ div.div_viewZone legend.lg_viewZone {
     border: none;
     padding: 0 12px !important;
   }
-  .form-control:not(.btn):not(.expressionAttr),
+  .form-control:not(.btn):not(.expressionAttr):not(input),
   input:not(.btn):not(.dial):not([type=radio]):not([type=image]):not(.expressionAttr):not(.knob):not([type=checkbox]),
   textarea:not(.expressionAttr) {
     background-color: var(--form-bg-color) !important;
