--- a/core/template/mobile/cmd.info.numeric.shutter.html
+++ b/core/template/mobile/cmd.info.numeric.shutter.html
@@ -4,7 +4,7 @@
     <div class="shuttergauge-bckg">
       <div class="shuttergauge-value"></div>
     </div>
-    <div class="shuttergauge-state state"><strong>#state#</strong> <strong>#unite#</strong></div>
+    <div class="shuttergauge-state state"><strong>#state# #unite#</strong></div>
   </div>
   <div class="cmdStats #hide_history#">
       <span title='{{Min}}' class='tooltips'>#minHistoryValue#</span>|<span title='{{Moyenne}}' class='tooltips'>#averageHistoryValue#</span>|<span title='{{Max}}' class='tooltips'>#maxHistoryValue# <i class="#tendance#"></i></span>
@@ -12,13 +12,13 @@
   <script>
      jeedom.cmd.addUpdateFunction('#id#',function(_options) {
       let cmd = $('.cmd[data-cmd_id=#id#]')
-      let height = (_options.display_value * 100 / (#maxValue#-#minValue#)) + #minValue#
+      let height = (_options.value * 100 / (#maxValue#-#minValue#)) + #minValue#
       height = 100 - (Math.round(parseFloat(height) * 10) / 10)
       cmd.find('.shuttergauge-value').height(height+'%')
-      cmd.find('.shuttergauge-state strong').first().text(_options.display_value)
+      cmd.find('.shuttergauge-state strong').first().text(_options.display_value+' '+_options.unit)
     });
 
-    jeedom.cmd.refreshValue([{cmd_id :'#id#',display_value: '#state#', valueDate: '#valueDate#', collectDate: '#collectDate#', alertLevel: '#alertLevel#', unit: '#unite#'}])
+    jeedom.cmd.refreshValue([{cmd_id :'#id#', value: '#value#', display_value: '#state#', valueDate: '#valueDate#', collectDate: '#collectDate#', alertLevel: '#alertLevel#', unit: '#unite#'}])
 
     if ($.issetWidgetOptParam('#color#', 'color')) {
       $('.cmd[data-cmd_id=#id#]').find('div.shuttergauge-value').style('background', '#color#', 'important')
