--- a/core/template/dashboard/cmd.action.slider.timeShutter.html
+++ b/core/template/dashboard/cmd.action.slider.timeShutter.html
@@ -11,7 +11,7 @@
     </div>
   </div>
   <div class="value" data-cmd_id="#id#">
-    <div class="state"><strong>#state#</strong> <strong>#unite#</strong></div>
+    <div class="state"><strong>#value# #unite#</strong></div>
   </div>
   <span class="timeCmd label label-default #value_history#" data-type="info" data-cmd_id="#value_id#"></span>
   <template>
@@ -24,6 +24,7 @@
     if ($.issetWidgetOptParam('#step#', 'step')) {
       step#id# = parseFloat('#step#')
     }
+
     var mySlider#id# = $.createWidgetSlider({
       sliderDiv: document.getElementById('widget_slider#id#'),
       vertical: true,
@@ -53,21 +54,20 @@
       }
     })
 
-    jeedom.cmd.addUpdateFunction('#id#',function(_options) {
+    jeedom.cmd.addUpdateFunction('#id#', function(_options) {
       let cmd = $('.cmd[data-cmd_uid=#uid#]')
       jeedom.cmd.displayDuration(_options.valueDate, cmd.find('.timeCmd'), '#time#')
-
       cmd.attr('title', '{{Date de valeur}} : '+_options.valueDate+'<br/>{{Date de collecte}} : '+_options.collectDate)
-      let position = _options.display_value
+      let position = _options.value
       let minValue = ('#minValue#' == '') ? 0 : parseInt('#minValue#')
       let maxValue = ('#maxValue#' == '') ? 100 : parseInt('#maxValue#')
       if ('#invert#' == '1') {
         position = maxValue - position
       }
-      height_#uid# = ((position - minValue) * 100) / (maxValue - minValue)
+      let height_#uid# = ((position - minValue) * 100) / (maxValue - minValue)
       height_#uid# = 100 - (Math.round(parseFloat(height_#uid#) * 10) / 10)
       cmd.find('.shuttergauge-value').height(height_#uid#+'%')
-      cmd.find('.state strong').first().text(_options.display_value)
+      cmd.find('.state strong').first().text(_options.display_value+' '+_options.unit)
       mySlider#id#.set(position)
     });
 
@@ -75,13 +75,13 @@
       shutterPos = $('.cmd[data-cmd_uid=#uid#] .state strong').first().html()
       let minValue = ('#minValue#' == '') ? 0 : parseInt('#minValue#')
       let maxValue = ('#maxValue#' == '') ? 100 : parseInt('#maxValue#')
-      if (shutterPos > 50) {
+      if (shutterPos > (maxValue - minValue) / 2) {
         jeedom.cmd.execute({id: '#id#', value: {slider: minValue}})
       } else {
         jeedom.cmd.execute({id: '#id#', value: {slider: maxValue}})
       }
     })
 
-    jeedom.cmd.refreshValue([{cmd_id :'#id#',display_value: '#state#', valueDate: '#valueDate#', collectDate: '#collectDate#', alertLevel: '#alertLevel#', unit: '#unite#'}])
+    jeedom.cmd.refreshValue([{cmd_id:'#id#', value: '#state#', display_value: '#state#', valueDate: '#valueDate#', collectDate: '#collectDate#', alertLevel: '#alertLevel#', unit: '#unite#'}])
   </script>
 </div>
