--- a/core/template/mobile/cmd.action.slider.timeShutter.html
+++ b/core/template/mobile/cmd.action.slider.timeShutter.html
@@ -6,7 +6,7 @@
         <div class="shuttergauge-value"></div>
       </div>
     </div>
-    <div class="shuttergauge-state state"><strong>#state#</strong> <strong>#unite#</strong></div>
+    <div class="shuttergauge-state state"><strong>#state# #unite#</strong></div>
     <div id="widget_slider#id#" class="slider full-width-slider"></div>
     <div class="timeCmd value #value_history#" data-type="info" data-cmd_id="#value_id#"></div>
   </center>
@@ -39,26 +39,26 @@
     jeedom.cmd.addUpdateFunction('#id#',function(_options) {
       let cmd = $('.cmd[data-cmd_uid=#uid#]')
       jeedom.cmd.displayDuration(_options.valueDate, cmd.find('.timeCmd'), '#time#')
-      let height = ((_options.display_value - #minValue#) * 100) / (#maxValue# - #minValue#)
+      let height = ((_options.value - #minValue#) * 100) / (#maxValue# - #minValue#)
       height = 100 - (Math.round(parseFloat(height) * 10) / 10)
       if ('#invert#' == '1') {
         let maxValue = ('#maxValue#' == '') ? 100 : parseInt('#maxValue#')
         height = maxValue - height
       }
       cmd.find('.shuttergauge-value').height(height+'%')
-      cmd.find('.state strong').first().text(_options.display_value)
-      mySlider#id#.set(_options.display_value)
+      cmd.find('.state strong').first().text(_options.display_value+' '+_options.unit)
+      mySlider#id#.set(_options.value)
     });
 
     $('.cmd[data-cmd_uid=#uid#] .shuttergauge-bckg').off().on('click', function() {
       shutterPos = $('.cmd[data-cmd_uid=#uid#] .state strong').first().html()
-      if (shutterPos > 50) {
+      if (shutterPos > (maxValue - minValue) / 2) {
         jeedom.cmd.execute({id: '#id#', value: {slider: #minValue#}})
       } else {
         jeedom.cmd.execute({id: '#id#', value: {slider: #maxValue#}})
       }
     })
 
-    jeedom.cmd.refreshValue([{cmd_id :'#id#',display_value: '#state#', valueDate: '#valueDate#', collectDate: '#collectDate#', alertLevel: '#alertLevel#', unit: '#unite#'}])
+    jeedom.cmd.refreshValue([{cmd_id:'#id#', value: '#state#', display_value: '#state#', valueDate: '#valueDate#', collectDate: '#collectDate#', alertLevel: '#alertLevel#', unit: '#unite#'}])
   </script>
 </div>
