--- a/core/template/mobile/cmd.action.slider.value.html
+++ b/core/template/mobile/cmd.action.slider.value.html
@@ -58,8 +58,8 @@
     })
 
     jeedom.cmd.addUpdateFunction('#id#',function(_options) {
-      if ('#noslider#' != '1') $inputNumber#id#.val(_options.display_value)
-      mySlider#id#.set(_options.display_value)
+      if ('#noslider#' != '1') $inputNumber#id#.val(_options.value)
+      mySlider#id#.set(_options.value)
     });
   </script>
 </div>
