--- a/core/themes/core2019_Dark/desktop/core2019_Dark.css
+++ b/core/themes/core2019_Dark/desktop/core2019_Dark.css
@@ -24,8 +24,7 @@ input[type=checkbox]:not(checked),
 input[type=radio]:not(checked) {
   background: var(--btn-default-color) !important;
 }
-input[type=checkbox]:checked,
-input[type=radio]:checked {
+input[type=checkbox]:checked {
   background: var(--sc-formTxt-color) !important;
 }
 
