update jstree to 3.3.12

--- a/3rdparty/jquery.tree/themes/default-dark/style.less
+++ b/3rdparty/jquery.tree/themes/default-dark/style.less
@@ -38,13 +38,13 @@
 // theme variants
 .jstree-@{theme-name} {
 	&.jstree-rtl .jstree-node { background-image:url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABgAAAACAQMAAAB49I5GAAAABlBMVEUAAACZmZl+9SADAAAAAXRSTlMAQObYZgAAAAxJREFUCNdjAAMOBgAAGAAJMwQHdQAAAABJRU5ErkJggg=="); }
-	&.jstree-rtl .jstree-last { background:transparent; }
+	&.jstree-rtl .jstree-last { background-image:transparent;  }
 }
 .jstree-@{theme-name}-small {
 	&.jstree-rtl .jstree-node { background-image:url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABIAAAACAQMAAABv1h6PAAAABlBMVEUAAACZmZl+9SADAAAAAXRSTlMAQObYZgAAAAxJREFUCNdjAAMHBgAAiABBI4gz9AAAAABJRU5ErkJggg=="); }
-	&.jstree-rtl .jstree-last { background:transparent; }
+	&.jstree-rtl .jstree-last { background-image:transparent;  }
 }
 .jstree-@{theme-name}-large {
 	&.jstree-rtl .jstree-node { background-image:url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAACAAAAACAQMAAAAD0EyKAAAABlBMVEUAAACZmZl+9SADAAAAAXRSTlMAQObYZgAAAAxJREFUCNdjgIIGBgABCgCBvVLXcAAAAABJRU5ErkJggg=="); }
-	&.jstree-rtl .jstree-last { background:transparent; }
+	&.jstree-rtl .jstree-last { background-image:transparent;  }
 }
