--- a/3rdparty/jquery.tree/themes/mixins.less
+++ b/3rdparty/jquery.tree/themes/mixins.less
@@ -17,7 +17,7 @@
 	.jstree-node,
 	.jstree-icon { background-image:url("@{image}"); }
 	.jstree-node { background-position:-(@image-height * 9 + @correction) -@correction; background-repeat:repeat-y; }
-	.jstree-last { background:transparent; }
+	.jstree-last { background-image:transparent; }
 
 	.jstree-open > .jstree-ocl { background-position:-(@image-height * 4 + @correction) -@correction; }
 	.jstree-closed > .jstree-ocl { background-position:-(@image-height * 3 + @correction) -@correction; }
@@ -67,7 +67,7 @@
 
 	&.jstree-rtl {
 		.jstree-node { background-image:url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABgAAAACAQMAAAB49I5GAAAABlBMVEUAAAAdHRvEkCwcAAAAAXRSTlMAQObYZgAAAAxJREFUCNdjAAMOBgAAGAAJMwQHdQAAAABJRU5ErkJggg=="); background-position: 100% 1px; background-repeat:repeat-y; }
-		.jstree-last { background:transparent; }
+		.jstree-last { background-image:transparent; }
 		.jstree-open > .jstree-ocl { background-position:-(@image-height * 4 + @correction) -(@image-height * 1 + @correction); }
 		.jstree-closed > .jstree-ocl { background-position:-(@image-height * 3 + @correction) -(@image-height * 1 + @correction); }
 		.jstree-leaf > .jstree-ocl { background-position:-(@image-height * 2 + @correction) -(@image-height * 1 + @correction); }
