--- a/3rdparty/jquery.tree/themes/responsive.less
+++ b/3rdparty/jquery.tree/themes/responsive.less
@@ -51,7 +51,7 @@
 	.jstree-checkbox { background-image:url("@{image-path}@{base-height}.png"); background-size:(@base-height * 3) (@base-height * 6); }
 
 	.jstree-node { background-position:-(@base-height * 2) 0; background-repeat:repeat-y; }
-	.jstree-last { background:transparent; }
+	.jstree-last { background-image:transparent; }
 	.jstree-leaf > .jstree-ocl { background-position:-(@base-height * 1) -(@base-height * 3); }
 	.jstree-last > .jstree-ocl { background-position:-(@base-height * 1) -(@base-height * 4); }
 	/*
