--- a/3rdparty/jquery.tree/themes/main.less
+++ b/3rdparty/jquery.tree/themes/main.less
@@ -43,17 +43,17 @@
 .jstree-@{theme-name} {
 	.jstree-theme(24px, "@{image-path}32px.png", 32px);
 	&.jstree-rtl .jstree-node { background-image:url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABgAAAACAQMAAAB49I5GAAAABlBMVEUAAAAdHRvEkCwcAAAAAXRSTlMAQObYZgAAAAxJREFUCNdjAAMOBgAAGAAJMwQHdQAAAABJRU5ErkJggg=="); }
-	&.jstree-rtl .jstree-last { background:transparent; }
+	&.jstree-rtl .jstree-last { background-image:transparent;  }
 }
 .jstree-@{theme-name}-small {
 	.jstree-theme(18px, "@{image-path}32px.png", 32px);
 	&.jstree-rtl .jstree-node { background-image:url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABIAAAACAQMAAABv1h6PAAAABlBMVEUAAAAdHRvEkCwcAAAAAXRSTlMAQObYZgAAAAxJREFUCNdjAAMHBgAAiABBI4gz9AAAAABJRU5ErkJggg=="); }
-	&.jstree-rtl .jstree-last { background:transparent; }
+	&.jstree-rtl .jstree-last { background-image:transparent;  }
 }
 .jstree-@{theme-name}-large {
 	.jstree-theme(32px, "@{image-path}32px.png", 32px);
 	&.jstree-rtl .jstree-node { background-image:url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAACAAAAACAQMAAAAD0EyKAAAABlBMVEUAAAAdHRvEkCwcAAAAAXRSTlMAQObYZgAAAAxJREFUCNdjgIIGBgABCgCBvVLXcAAAAABJRU5ErkJggg=="); }
-	&.jstree-rtl .jstree-last { background:transparent; }
+	&.jstree-rtl .jstree-last { background-image:transparent;  }
 }
 
 // mobile theme attempt
