--- a/desktop/css/desktop.main.css
+++ b/desktop/css/desktop.main.css
@@ -35,6 +35,10 @@ Desktop
     background-position: center center;
   }
 
+  body[data-theme="core2019_Dark"] i.jstree-icon {
+    filter: invert(1);
+  }
+  
   .reportModeVisible,
   .hidden  {
     display: none !important;
@@ -1393,9 +1397,10 @@ div.div_viewZone legend.lg_viewZone {
     font-size: 2em;
   }
 
-  #mod_selectIcon .iconSelected {
-    background-color: var(--objectBkgd-color);
-    color: white;
+  #mod_selectIcon .iconSelected,
+  #mod_selectIcon .iconSelected > span.cursor > i {
+    background-color: var(--placeholder-color);
+    color: var(--eqTitle-color)!important;
   }
 
   #mod_selectIcon #tabimg .imgContainer img {
@@ -3340,6 +3345,19 @@ div.div_viewZone legend.lg_viewZone {
   }
   .jstree li a:hover {
     background-color: var(--form-bg-color);
+  }
+  .vakata-context {
+    background: var(--bg-modal-color);
+    box-shadow: unset;
+    z-index: 9999;
+  }
+  .vakata-context > li > a {
+    color: var(--txt-color) !important;
+    text-shadow: unset !important;
+  }
+  .vakata-context-hover > a {
+    background: var(--btnEq-default-color) !important;
+    box-shadow: unset!important;
   }
 
 /* ____________________SCENARIO */
