--- a/desktop/css/desktop.main.css
+++ b/desktop/css/desktop.main.css
@@ -38,7 +38,7 @@ Desktop
   body[data-theme="core2019_Dark"] i.jstree-icon {
     filter: invert(1);
   }
-  
+
   .reportModeVisible,
   .hidden  {
     display: none !important;
@@ -3347,17 +3347,24 @@ div.div_viewZone legend.lg_viewZone {
     background-color: var(--form-bg-color);
   }
   .vakata-context {
-    background: var(--bg-modal-color);
+    background: var(--form-bg-color);
     box-shadow: unset;
     z-index: 9999;
+    border: none;
   }
   .vakata-context > li > a {
     color: var(--txt-color) !important;
     text-shadow: unset !important;
+
   }
   .vakata-context-hover > a {
     background: var(--btnEq-default-color) !important;
     box-shadow: unset!important;
+  }
+
+  .vakata-contextmenu-sep, .vakata-context-separator > a {
+    background: rgb(var(--bg-color)) !important;
+    border-color: rgb(var(--bg-color)) !important;
   }
 
 /* ____________________SCENARIO */
