--- a/desktop/css/desktop.main.css
+++ b/desktop/css/desktop.main.css
@@ -1893,7 +1893,8 @@ div.div_viewZone legend.lg_viewZone {
     min-height: 20px !important;
     display: inline-block !important;
   }
-  body[data-page="administration"] div#config div#div_actionOnMessage {
+  body[data-page="administration"] div#config div#div_actionOnMessage,
+  body[data-page="administration"] div#config div#div_actionOnMessagealerting{
     width:  98%;
   }
 
