Dynamic history reloading

--- a/desktop/css/desktop.main.css
+++ b/desktop/css/desktop.main.css
@@ -4182,7 +4182,13 @@ div.div_viewZone legend.lg_viewZone {
     font-weight: 700;
   }
   div.chartContainer .highcharts-button-disabled {
-    opacity: 0.3;
+    opacity: 0.6;
+  }
+  g.highcharts-button-disabled.warning > rect {
+    fill: var(--al-warning-color) !important;
+  }
+  g.highcharts-button-disabled.warning > text {
+    fill: var(--link-color) !important;
   }
   div.chartContainer .highcharts-button-box {
     x:0;
