history reload mobile

--- a/desktop/css/desktop.main.css
+++ b/desktop/css/desktop.main.css
@@ -4182,13 +4182,13 @@ div.div_viewZone legend.lg_viewZone {
     font-weight: 700;
   }
   div.chartContainer .highcharts-button-disabled {
-    opacity: 0.6;
+    opacity: 0.6 !important;
   }
-  g.highcharts-button-disabled.warning > rect {
+  div.chartContainer g.highcharts-button-disabled.warning > rect {
     fill: var(--al-warning-color) !important;
   }
-  g.highcharts-button-disabled.warning > text {
-    fill: var(--link-color) !important;
+  div.chartContainer g.highcharts-button-disabled.warning > text {
+    fill: var(--sc-formTxt-color) !important;
   }
   div.chartContainer .highcharts-button-box {
     x:0;
