--- a/mobile/css/mobile.main.css
+++ b/mobile/css/mobile.main.css
@@ -1407,7 +1407,13 @@
   }
 
   div.chartContainer .highcharts-button-disabled {
-    opacity: 0.3;
+    opacity: 0.6 !important;
+  }
+  div.chartContainer g.highcharts-button-disabled.warning > rect {
+    fill: var(--al-warning-color) !important;
+  }
+  div.chartContainer g.highcharts-button-disabled.warning > text {
+    fill: var(--sc-formTxt-color) !important;
   }
   div.chartContainer .highcharts-button-box {
     x:0;
