--- a/mobile/css/mobile.main.css
+++ b/mobile/css/mobile.main.css
@@ -1433,6 +1433,9 @@
     stroke: transparent;
     fill: var(--objectTxt-color) !important;
   }
+  div.chartContainer g.highcharts-range-selector-group g.highcharts-button.warning > text{
+    fill: var(--al-warning-color) !important;
+  }
   path.highcharts-graph {
     stroke-width: 1.2;
   }
