Have a nice time - Fix mobile css object_name not seen - Object get/setValues pure js - common/utils : new showAlert, hideAlert, hideLoading, showLoading with timeout security for ui 	-> May be set on full Core for test

--- a/mobile/css/mobile.main.css
+++ b/mobile/css/mobile.main.css
@@ -380,7 +380,8 @@
   }
   .eqLogic.eqLogic-widget .widget-name .object_name {
     vertical-align: super;
-    font-size: 11px !important;
+    font-size: 13px !important;
+    margin: 10px;
   }
   .eqLogic.eqLogic-widget:not(.displayObjectName) .widget-name .object_name {
     display: none;
@@ -539,6 +540,7 @@
     background: transparent !important;
   }
   body[data-coloredcats="0"] div.eqLogic-widget .widget-name > span,
+  body[data-coloredcats="0"] div.eqLogic-widget .widget-name > span .object_name,
   body[data-coloredcats="0"] div.scenario.scenario-widget .widget-name  > a,
   body[data-coloredcats="0"] div.eqLogic-widget span.cmd.refresh > i {
     color: var(--link-color) !important;
