--- a/core/template/mobile/eqLogic.html
+++ b/core/template/mobile/eqLogic.html
@@ -2,6 +2,9 @@
   <span class="cmd refresh pull-right cursor" data-cmd_id="#refresh_id#">
     <i class="fas fa-sync"></i>
   </span>
+  <span class="panelLink pull-right cursor" data-cmd_id="#panelLink#">
+    <a href="#panelLink#"></a><i class="fas fa-external-link-alt"></i></a>
+  </span>
   <center>
     <span class="widget-name">
       <span class="warning" title="#alert_name#">
@@ -15,6 +18,9 @@
   </center>
   #divGraphInfo#
   <script>
+    if ('#panelLink#' == '') {
+      $('.eqLogic[data-eqLogic_uid=#uid#] .panelLink').remove()
+    }
     if ('#refresh_id#' != '') {
       $('.eqLogic[data-eqLogic_uid=#uid#] .refresh').on('click', function () {
         jeedom.cmd.execute({id: '#refresh_id#'})
