--- a/core/template/mobile/eqLogic.html
+++ b/core/template/mobile/eqLogic.html
@@ -2,8 +2,8 @@
   <span class="cmd refresh pull-right cursor" data-cmd_id="#refresh_id#">
     <i class="fas fa-sync"></i>
   </span>
-  <span class="panelLink pull-right cursor" data-cmd_id="#panelLink#">
-    <a href="#panelLink#"></a><i class="fas fa-external-link-alt"></i></a>
+  <span class="panelLink pull-left cursor">
+    <a href="#panelLink#"><i class="fas fa-external-link-alt"></i></a>
   </span>
   <center>
     <span class="widget-name">
