--- a/core/template/mobile/eqLogic.html
+++ b/core/template/mobile/eqLogic.html
@@ -2,11 +2,11 @@
   <span class="cmd refresh pull-right cursor" data-cmd_id="#refresh_id#">
     <i class="fas fa-sync"></i>
   </span>
-  <span class="panelLink pull-left cursor">
-    <a href="#panelLink#"><i class="fas fa-external-link-alt"></i></a>
-  </span>
   <center>
     <span class="widget-name">
+      <span class="panelLink pull-left cursor">
+        <a class="link" href="#panelLink#"><i class="fas fa-external-link-alt"></i></a>
+      </span>
       <span class="warning" title="#alert_name#">
         <i class='#alert_icon#'></i>
       </span>
