--- a/core/template/mobile/cmd.info.binary.tmpliconline.html
+++ b/core/template/mobile/cmd.info.binary.tmpliconline.html
@@ -1,5 +1,5 @@
 <div class="cmd cmd-widget #history#" data-type="info" data-subtype="binary" data-template="tmpliconline" data-version="#version#" data-eqLogic_id="#eqLogic_id#" data-cmd_id="#id#" data-cmd_uid="#uid#">
-	<center><span class="cmdName #hide_name#">#name_display#</span> <span class="iconCmdLine"></span></center>
+	<span class="cmdName #hide_name#">#name_display#</span> <span class="iconCmdLine"></span>
 	<script>
 		 jeedom.cmd.addUpdateFunction('#id#',function(_options) {
 			let cmd = $('.cmd[data-cmd_id=#id#]')
