fix legend mobile on plugin page

--- a/mobile/css/mobile.main.css
+++ b/mobile/css/mobile.main.css
@@ -1023,7 +1023,7 @@
   }
 
   /*panel */
-  body[data-page="panel"] #page legend {
+  body[data-plugin] #page legend {
     background-color: rgba(var(--bg-color), var(--opacity)) !important;
     margin: 5px 0 !important;
   }
